<?xml version="1.0" encoding="utf-8"?><!--activity_game.xml-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GameActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/game_title"
            android:layout_width="wrap_content"
            android:layout_height="80sp"

            android:padding="5sp"
            android:text="@string/default_game_title"

            android:textSize="40sp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="400sp"
        android:layout_height="92dp"
        android:textAlignment="center">

        <TextView
            android:layout_width="120sp"
            android:layout_height="40sp"
            android:text="@string/mine_prompt"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/mine_counter"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:text="@string/timer_start"
            android:textSize="25sp" />

        <TextView
            android:layout_width="100sp"
            android:layout_height="40sp"
            android:text="@string/time_prompt"
            android:textSize="25sp" />

        <Chronometer
            android:id="@+id/goldfish_chronometer"
            android:layout_width="125dp"
            android:layout_height="40dp"

            android:textSize="25sp" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/exit_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/exit_button_label" />

        <View
            android:id="@+id/divider"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white" />

        <Button

            android:id="@+id/restart_button"
            android:layout_width="8dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/restart_button_label" />
    </LinearLayout>

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <GridLayout
                android:id="@+id/grids_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </ScrollView>
    </HorizontalScrollView>
</LinearLayout>