<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrivacyCollectionActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constrainedWidth="true"
        app:layout_constraintBaseline_toBaselineOf="parent"
        android:id="@+id/privacy_activity_title_layout"
        >

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_collection"
            android:textAlignment="center"
            android:textSize="40sp"
            />
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constrainedHeight="true"
        app:layout_constraintBaseline_toBottomOf="@+id/privacy_activity_title_layout"
        >
        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constrainedHeight="true"
                app:layout_constrainedWidth="true"
                android:id="@+id/privacy_record_table"
                >
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/table_row_bg"

                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/enter_time"
                        android:background="@drawable/table_cell_bg"
                        android:textSize="30sp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/exit_time"
                        android:background="@drawable/table_cell_bg"
                        android:textSize="30sp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/coordinate"
                        android:background="@drawable/table_cell_bg"
                        android:textSize="30sp"
                        />
                </TableRow>

            </TableLayout>
        </HorizontalScrollView>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_return_label"
            android:textSize="30sp"
            android:id="@+id/entry_privacy_record_return_button"
            />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>